# finops-mvp

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  ruff.toml
docs/: ARCHITECTURE.md  DATA_FLOW.md  (+6 more)
libs/billing_common/: README.md  pyproject.toml
libs/billing_common/src/billing_common/: __init__.py
libs/billing_common/src/billing_common/adapters/: __init__.py  bigquery.py
libs/billing_common/src/billing_common/config/: __init__.py  base.py
libs/billing_common/src/billing_common/dates/: __init__.py  date_util.py
libs/billing_common/src/billing_common/logging/: __init__.py  json_logger.py
libs/billing_common/src/billing_common/secrets/: secret_manager.py
libs/billing_common/tests/: test_base_env_configs.py  test_bigquery_adapter.py  test_date_util.py  test_json_logger.py  test_secret_manager.py
pipelines/gold/: .env.example  README.md  pyproject.toml
pipelines/gold/src/gold_pipeline/: main.py
pipelines/gold/src/gold_pipeline/config/: env_configs.py
pipelines/gold/src/gold_pipeline/services/: gold_service.py
pipelines/gold/src/gold_pipeline/templates/: gold_query.py  lancamentos_looker_merge_query.py
pipelines/gold/tests/: conftest.py  expected_gold_queries.py  test_gold_service.py
pipelines/gold_foundation/: .env.example  README.md  pyproject.toml
pipelines/gold_foundation/src/gold_foundation_pipeline/: main.py
pipelines/gold_foundation/src/gold_foundation_pipeline/config/: env_configs.py
pipelines/gold_foundation/src/gold_foundation_pipeline/services/: gold_foundation_service.py
pipelines/gold_foundation/src/gold_foundation_pipeline/templates/: gold_foundation_query.py
pipelines/gold_foundation/tests/: conftest.py  expected_gold_foundation_queries.py  test_gold_foundation_service.py
pipelines/gold_pre_foundation/: .env.example  README.md  pyproject.toml
pipelines/gold_pre_foundation/src/gold_pre_foundation_pipeline/: main.py
pipelines/gold_pre_foundation/src/gold_pre_foundation_pipeline/config/: env_configs.py
pipelines/gold_pre_foundation/src/gold_pre_foundation_pipeline/services/: gold_pre_foundation_service.py
pipelines/gold_pre_foundation/src/gold_pre_foundation_pipeline/templates/: gold_pre_foundation_query.py
pipelines/gold_pre_foundation/tests/: conftest.py  expected_gold_pre_foundation_queries.py  test_gold_pre_foundation_service.py
pipelines/gold_pre_foundation/tests/reconciliation/: README.md
pipelines/oci_recommendations/: .env.example  Dockerfile  README.md  pyproject.toml
pipelines/oci_recommendations/src/oci_recommendations_pipeline/: main.py
pipelines/oci_recommendations/src/oci_recommendations_pipeline/clients/: oci_client.py
pipelines/oci_recommendations/src/oci_recommendations_pipeline/config/: env_configs.py
pipelines/oci_recommendations/src/oci_recommendations_pipeline/schemas/: recommendations_schema.py
pipelines/oci_recommendations/src/oci_recommendations_pipeline/services/: oci_recommendations_service.py
pipelines/oci_recommendations/tests/: conftest.py  fixtures_oci.py  test_oci_client.py  test_oci_recommendations_service.py
pipelines/silver/: .env.example  README.md  pyproject.toml
pipelines/silver/src/silver_pipeline/: __init__.py  main.py
pipelines/silver/src/silver_pipeline/config/: __init__.py  env_configs.py
pipelines/silver/src/silver_pipeline/services/: __init__.py  silver_label_service.py
pipelines/silver/src/silver_pipeline/templates/: silver_query.py
pipelines/silver/tests/: conftest.py  expected_silver_queries.py  test_silver_label_service.py
pipelines/unificado/: .env.example  README.md  pyproject.toml
pipelines/unificado/src/unificado_pipeline/: main.py
pipelines/unificado/src/unificado_pipeline/config/: env_configs.py
pipelines/unificado/src/unificado_pipeline/services/: unificado_service.py
pipelines/unificado/src/unificado_pipeline/templates/: gold_unificada_query.py
pipelines/unificado/tests/: conftest.py  expected_unificado_queries.py  test_unificado_service.py
(+23 files in other folders)
