[project]
name = "billing-common"
version = "0.1.0"
description = "Biblioteca interna compartilhada por todos os pipelines do finops-billing (adapters, logging, config, dates)."
requires-python = ">=3.12"
dependencies = [
    "google-cloud-bigquery>=3.25,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/billing_common"]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]
