[project]
name = "gold-pipeline"
version = "0.1.0"
description = "Camada Gold do medalhão moderno (gcp_labels) — rateio final por projeto/AR com labels do GCP."
requires-python = ">=3.12"
dependencies = [
    "billing-common",
    "jinja2>=3.1,<4",
]

[tool.uv.sources]
billing-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gold_pipeline"]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]
