[project]
name = "gold-pre-foundation-pipeline"
version = "0.1.0"
description = "Camada Gold Pre-Foundation do medalhão moderno (gcp_labels) — pré-rateio sobre a Silver com labels do GCP."
requires-python = ">=3.12"
dependencies = [
    "billing-common",
    "jinja2>=3.1,<4",
]

[tool.uv.sources]
billing-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gold_pre_foundation_pipeline"]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]
