[project]
name = "unificado-pipeline"
version = "0.1.0"
description = "Camada Unificado do medalhão moderno (gcp_labels) — consolidação multicloud (GCP/Tsuru/DBaaS)."
requires-python = ">=3.12"
dependencies = [
    "billing-common",
    "jinja2>=3.1,<4",
]

[tool.uv.sources]
billing-common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unificado_pipeline"]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
]
